fix: add fixed width for Accordion Story

--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.withFixedWidth {
+    width: 322px;
+}
+
 .titleContainer {
     display: flex;
     justify-content: space-between;
